<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.server.ServerPage">
    <LinearLayout
        android:id="@+id/connectionUI"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:context=".ui.server.ServerPage">

        <TextView
            android:textStyle="normal"
            android:textAlignment="center"
            android:text="@string/server_instruction"
            android:id="@+id/IPAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <com.airbnb.lottie.LottieAnimationView
            app:lottie_loop="false"
            android:id="@+id/launchAnimation"
            app:lottie_autoPlay="false"
            app:lottie_rawRes="@raw/animation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            style="@style/RoundedCornerMaterialButton"
            android:text="@string/show_chat_page"
            android:id="@+id/showChatPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            style="@style/RoundedCornerMaterialButton"
            android:text="@string/start"
            android:id="@+id/startServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            style="@style/RoundedCornerMaterialButton"
            android:visibility="gone"
            android:text="@string/stop"
            android:id="@+id/stopServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
    <include
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        layout="@layout/chat_layout"
        android:id="@+id/chatUI"
        android:layout_width="0dp"
        android:layout_height="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
