<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.client.ClientPage">

    <LinearLayout
        android:id="@+id/connectionUI"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/IPAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_instruction"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/connecting" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/IPAddressEditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="?attr/colorPrimary"
            app:boxStrokeWidthFocused="1dp"
            app:boxStrokeWidth="1dp"
            android:padding="10dp"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/ip_address"
                android:maxLines="1"
                android:minLines="1"
                android:padding="10dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            style="@style/RoundedCornerMaterialButton"
            android:text="@string/show_chat_page"
            android:id="@+id/showChatPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/connect"
            style="@style/RoundedCornerMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect" />
        <com.google.android.material.button.MaterialButton
            style="@style/RoundedCornerMaterialButton"
            android:visibility="gone"
            android:text="@string/stop"
            android:id="@+id/stopClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <include
        android:id="@+id/chatUI"
        layout="@layout/chat_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

